Fix alignwide margins

--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ Theme URI:          https: //github.com/WPSwitzerland/wordcampswitzerland-2023
 Author:             Say Hello GmbH
 Author URI:         https://sayhello.ch
 Description:        A WordPress Theme by Say Hello
-Version:            0.1.5
+Version:            0.1.6
 License:            GNU General Public License v3 or later
 License URI:        https://www.gnu.org/licenses/gpl.html
 Text Domain:        sht
@@ -26,6 +26,8 @@ Integration URL:    https://raw.githubusercontent.com/WPSwitzerland/wordcampswit
 
 .alignwide {
     max-width: 1278px !important;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .c-header {
